fix vertical align in block-level element
fixes #518

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1603,7 +1603,6 @@ Usage (In Ghost editor):
     border-bottom: rgba(255,255,255,0.3) 1px solid;
     color: #fff;
     font-weight: 500;
-    vertical-align: top;
     transition: opacity 0.3s ease;
 }
 
